--- a/XYZReader/src/main/res/values-v21/styles.xml
+++ b/XYZReader/src/main/res/values-v21/styles.xml
@@ -16,14 +16,9 @@
 -->
 
 <resources>
-    <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#4CAF50</color>
-    <color name="theme_primary_dark">#388E3C</color>
-    <color name="theme_accent">#4CAF50</color>
-    <color name="ltgray">#ffe0e0e0</color>
+    <style name="Theme.Bacon.Detail" parent="Theme.Bacon">
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
 
-    <color name="main_text_color">#FFFFFF</color>
-    <color name="primary_text">#212121</color>
-    <color name="secondary_text">#757575</color>
 </resources>
